[package]
name = "exe-runners"
version = "0.1.0"
edition = "2021"


[lib]
name = "exe_runners"

[dependencies]

# async
tokio = { version = "1", features = [
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
] }
futures-util = "0.3"

# tracing
tracing-futures = "0.2"
tracing = "0.1.0"

# misc
auto_impl = "1"
dyn-clone = "1.0.17"
thiserror = "1.0"

# reth-tasks 
reth-tasks = { git = "https://github.com/paradigmxyz/reth", version = "1.5.0", optional = true }


[dev-dependencies]
tokio = { version = "1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
] }


[features]
default = []
reth-tasks = ["dep:reth-tasks"]
